style: fix Pagination extra margin right (#27610)
* style: fix Pagination extra margin right

* fix rtl style

--- a/components/pagination/style/index.less
+++ b/components/pagination/style/index.less
@@ -230,12 +230,12 @@
     &-size-changer.@{ant-prefix}-select {
       display: inline-block;
       width: auto;
-      margin-right: 8px;
     }
 
     &-quick-jumper {
       display: inline-block;
       height: @input-height-base;
+      margin-left: @margin-xs;
       line-height: @input-height-base;
       vertical-align: top;
 
